--- a/redmine/roles/common/tasks/main.yml
+++ b/redmine/roles/common/tasks/main.yml
@@ -2,11 +2,12 @@
 - name: install python-selinux
   yum: pkg=libselinux-python state=latest
 
-- name: disable selinux
-  selinux: state=disabled
-
 - name: selinux setenforce 0
   command: setenforce 0
+  ignore_errors: True
+
+- name: disable selinux
+  selinux: state=disabled
 
 - name: insert iptables rule
   lineinfile: dest=/etc/sysconfig/iptables state=present regexp="{{ httpd_port }}"
