--- a/redmine/roles/apache/tasks/main.yml
+++ b/redmine/roles/apache/tasks/main.yml
@@ -6,3 +6,8 @@
 
 - name: start httpd
   action: service name=httpd state=started enabled=yes
+
+- name: insert iptables rule
+  lineinfile: dest=/etc/sysconfig/iptables state=present regexp="{{ httpd_port }}"
+              insertafter="^:OUTPUT " line="-A INPUT -p tcp --dport {{ httpd_port }} -j ACCEPT"
+  notify: restart iptables
