--- a/redmine/roles/redmine/templates/redmine.conf
+++ b/redmine/roles/redmine/templates/redmine.conf
@@ -1,4 +1,5 @@
 <VirtualHost *:80>
+    ServerName redmine
     ServerAdmin redmine@example.com
     DocumentRoot /var/apps/redmine/public
     ErrorLog logs/redmine-error_log
