--- a/gitlab/roles/gitlab/vars/main.yml
+++ b/gitlab/roles/gitlab/vars/main.yml
@@ -4,5 +4,5 @@ gitlab_shell_repo: https://github.com/gitlabhq/gitlab-shell.git
 gitlab_ver: "5.4.0"
 gitlab_repo: https://github.com/gitlabhq/gitlabhq.git
 gitlab_user: git
-gitlab_host: 127.0.0.1
+gitlab_host: ${inventory_hostname}
 sidekiq_init_script: https://gist.github.com/akishin/6104332/raw/50f19f74e31880b3fd12f06516e94530d3d2d222/sidekiq
