--- a/gitlab/roles/redis/vars/main.yml
+++ b/gitlab/roles/redis/vars/main.yml
@@ -1,5 +1,7 @@
 ---
-libunwind: http://dl.fedoraproject.org/pub/epel/6/x86_64/libunwind-1.1-2.el6.x86_64.rpm
-libunwind_devel: http://dl.fedoraproject.org/pub/epel/6/x86_64/libunwind-devel-1.1-2.el6.x86_64.rpm
-gperftools_libs: http://dl.fedoraproject.org/pub/epel/6/x86_64/gperftools-libs-2.0-11.el6.3.x86_64.rpm
-redis: http://rpms.famillecollet.com/enterprise/6/remi/x86_64/redis-2.6.13-1.el6.remi.x86_64.rpm
+gpg_keys:
+  - http://dl.fedoraproject.org/pub/epel/RPM-GPG-KEY-EPEL-6
+  - http://rpms.famillecollet.com/RPM-GPG-KEY-remi
+repo_rpms:
+  - http://dl.fedoraproject.org/pub/epel/6/x86_64/epel-release-6-8.noarch.rpm
+  - http://rpms.famillecollet.com/enterprise/remi-release-6.rpm
